--- a/views/chatroom.jade
+++ b/views/chatroom.jade
@@ -45,7 +45,7 @@ block content
 				.displayMessagesWrap
 					ul#incoming
 				.sendMessagesWrap
-					input#outgoing(type='text')
+					textarea#outgoing(cols="30", rows="3")
 					.chatOptions
 						label.chat-btn#chat-btn-image(for="imageFile")
 							img(src='/images/icon-image.png')
