--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 * {
   box-sizing: border-box; }
 
+html, body {
+  height: 100%; }
+
 body {
   font-family: "Questrial", sans-serif;
   background-color: #ebebeb;
@@ -22,16 +25,16 @@ a {
   a:hover {
     color: #213e64; }
 
-button, .container .open .social-login .social-btn, .container .dash .logout, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn {
+button, .container .open .social-login .social-btn, .container .chatChoiceWrap .chatChoices .chatChoice, .container .chatRoom .blockedAlert .popup .popup-btn, .container .errorWrap .error #retry, .logout {
   border: none;
   background-color: #ea5455;
   color: #ffffff;
   cursor: pointer;
   font-family: "Questrial", sans-serif;
   font-size: 1em; }
-  button:hover, .container .open .social-login .social-btn:hover, .container .dash .logout:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover {
+  button:hover, .container .open .social-login .social-btn:hover, .container .chatChoiceWrap .chatChoices .chatChoice:hover, .container .chatRoom .blockedAlert .popup .popup-btn:hover, .container .errorWrap .error #retry:hover, .logout:hover {
     background-color: #213e64; }
-  button:focus, .container .open .social-login .social-btn:focus, .container .dash .logout:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus {
+  button:focus, .container .open .social-login .social-btn:focus, .container .chatChoiceWrap .chatChoices .chatChoice:focus, .container .chatRoom .blockedAlert .popup .popup-btn:focus, .container .errorWrap .error #retry:focus, .logout:focus {
     outline: none; }
 
 .htags, h1, h2, h3 {
@@ -69,7 +72,8 @@ p {
   -webkit-margin-after: 0px;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
-  margin: 0px; }
+  margin: 0px;
+  line-height: 1.2em; }
 
 form {
   padding: 20px;
@@ -108,11 +112,16 @@ header {
     padding: 10px 0; }
 
 .container {
-  width: 100%; }
+  width: 100%;
+  min-height: 100%;
+  margin-bottom: -50px; }
   @media screen and (min-width: 700px) {
     .container {
       width: 500px;
       margin: 0 auto; } }
+  .container .alert {
+    padding-top: 20px;
+    color: #ea5455; }
   .container .open {
     width: 95%;
     margin: 10px auto;
@@ -167,11 +176,11 @@ header {
         margin: 0 auto; }
     .container .open .notamember {
       padding-top: 60px; }
-    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .dash #delete.logout, .container .dash .open #deleteUser #delete.logout, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn {
+    .container .open #deleteUser button#delete, .container .open #deleteUser .social-login #delete.social-btn, .container .open .social-login #deleteUser #delete.social-btn, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn, .container .open #deleteUser #delete.logout {
       background-color: #ffffff;
       border: #ffffff;
       color: #ea5455; }
-      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .dash #delete.logout:hover, .container .dash .open #deleteUser #delete.logout:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover {
+      .container .open #deleteUser button#delete:hover, .container .open #deleteUser .social-login #delete.social-btn:hover, .container .open .social-login #deleteUser #delete.social-btn:hover, .container .open #deleteUser .chatChoiceWrap .chatChoices #delete.chatChoice:hover, .container .chatChoiceWrap .chatChoices .open #deleteUser #delete.chatChoice:hover, .container .open #deleteUser .chatRoom .blockedAlert .popup #delete.popup-btn:hover, .container .chatRoom .blockedAlert .popup .open #deleteUser #delete.popup-btn:hover, .container .open #deleteUser #delete.logout:hover {
         color: #213e64; }
     .container .open #appeal .form-submit {
       width: 100%;
@@ -253,26 +262,8 @@ header {
       pointer-events: none; }
   .container .chatWraps, .container .dash, .container .chatChoiceWrap, .container .history, .container .threadList, .container .forumWrap, .container .settingsWrap, .container .errorWrap {
     width: 100%;
-    padding: 40px 0;
+    padding: 40px 0 0;
     text-align: center; }
-  .container .dash .logout {
-    right: 20px;
-    position: absolute;
-    bottom: 20px;
-    margin: 0 auto;
-    border: solid 2px #ea5455;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    border-radius: 5px;
-    padding: 5px 20px;
-    margin-top: 20px; }
-    .container .dash .logout:hover {
-      background-color: #213e64;
-      border: solid 2px #213e64; }
-    .container .dash .logout a {
-      color: #ffffff;
-      text-align: center; }
   .container .chatChoiceWrap .chatChoices {
     padding: 40px 0; }
     .container .chatChoiceWrap .chatChoices .chatChoice {
@@ -286,13 +277,13 @@ header {
       border-radius: 5px; }
   .container .history ul, .container .threadList ul {
     width: 100%;
-    padding: 40px 0; }
+    padding: 0 0 40px; }
     .container .history ul li, .container .threadList ul li {
       width: 100%;
       position: relative; }
       .container .history ul li ul, .container .history ul li .postItem, .container .threadList ul li ul, .container .threadList ul li .postItem {
         width: 90%;
-        padding: 0 40px;
+        padding: 0 40px 10px;
         margin: 0 auto;
         color: #213e64;
         text-align: left; }
@@ -304,6 +295,9 @@ header {
           padding: 20px 0 10px;
           width: 50%;
           display: inline-block; }
+          @media screen and (max-width: 500px) {
+            .container .history ul li ul .middle-left, .container .history ul li .postItem .middle-left, .container .threadList ul li ul .middle-left, .container .threadList ul li .postItem .middle-left {
+              font-size: 0.7em; } }
           .container .history ul li ul .middle-left .icon, .container .history ul li .postItem .middle-left .icon, .container .threadList ul li ul .middle-left .icon, .container .threadList ul li .postItem .middle-left .icon {
             width: 22px;
             display: inline-block;
@@ -317,6 +311,9 @@ header {
           width: 50%;
           display: inline-block;
           text-align: right; }
+          @media screen and (max-width: 500px) {
+            .container .history ul li ul .middle-right, .container .history ul li .postItem .middle-right, .container .threadList ul li ul .middle-right, .container .threadList ul li .postItem .middle-right {
+              font-size: 0.7em; } }
         .container .history ul li ul .post, .container .history ul li .postItem .post, .container .threadList ul li ul .post, .container .threadList ul li .postItem .post {
           padding: 10px 0 10px; }
         .container .history ul li ul .postnumber, .container .history ul li .postItem .postnumber, .container .threadList ul li ul .postnumber, .container .threadList ul li .postItem .postnumber {
@@ -327,12 +324,18 @@ header {
           padding: 10px 0;
           width: 50%;
           display: inline-block; }
+          @media screen and (max-width: 500px) {
+            .container .history ul li ul .bottom-left, .container .history ul li .postItem .bottom-left, .container .threadList ul li ul .bottom-left, .container .threadList ul li .postItem .bottom-left {
+              font-size: 0.7em; } }
         .container .history ul li ul .bottom-right, .container .history ul li .postItem .bottom-right, .container .threadList ul li ul .bottom-right, .container .threadList ul li .postItem .bottom-right {
           font-size: 0.8em;
           width: 50%;
           text-align: right;
           padding: 10px 5px;
           display: inline-block; }
+          @media screen and (max-width: 500px) {
+            .container .history ul li ul .bottom-right, .container .history ul li .postItem .bottom-right, .container .threadList ul li ul .bottom-right, .container .threadList ul li .postItem .bottom-right {
+              font-size: 0.7em; } }
           .container .history ul li ul .bottom-right a, .container .history ul li .postItem .bottom-right a, .container .threadList ul li ul .bottom-right a, .container .threadList ul li .postItem .bottom-right a {
             padding: 0 5px; }
         .container .history ul li ul .blocked, .container .history ul li .postItem .blocked, .container .threadList ul li ul .blocked, .container .threadList ul li .postItem .blocked {
@@ -355,6 +358,8 @@ header {
         -ms-box-shadow: 0 transparent;
         box-shadow: 0 transparent;
         border-bottom: solid 1px #d2d2d2; }
+  .container .history h2, .container .threadList h2 {
+    padding: 0 0 40px; }
   .container .chatRoom {
     padding-top: 50px; }
     .container .chatRoom .chatPartner {
@@ -436,8 +441,8 @@ header {
           width: 92%;
           display: inline-block;
           padding: 10px;
-          margin-bottom: 20px;
-          word-wrap: break-word; }
+          word-wrap: break-word;
+          margin: 20px 0; }
           @media screen and (max-width: 450px) {
             .container .chatRoom .displayMessagesWrap #incoming .incomingMessage {
               width: 85%; } }
@@ -498,11 +503,15 @@ header {
           width: 500px;
           margin: 0 auto; } }
       .container .chatRoom .sendMessagesWrap #outgoing {
-        height: 40px;
         width: 100%;
         border: none;
-        padding: 0 20px;
-        font-family: "Questrial", sans-serif; }
+        padding: 10px 20px;
+        font-family: "Questrial", sans-serif;
+        -webkit-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
+        -moz-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
+        -ms-box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px -5px 14px -5px rgba(0, 0, 0, 0.2);
+        margin-bottom: -5px; }
       .container .chatRoom .sendMessagesWrap .chatOptions {
         width: 100%;
         height: 40px; }
@@ -597,17 +606,19 @@ header {
             height: 38px;
             width: auto;
             margin: 0 auto; }
-  .container .forumWrap h1 {
-    padding-top: 20px; }
   .container .forumWrap .addPost {
     float: right;
     padding: 20px;
-    position: fixed;
+    position: relative;
     bottom: 0px;
     right: 0px; }
     .container .forumWrap .addPost a .add {
       width: 50px;
-      height: auto; }
+      height: auto;
+      position: fixed;
+      bottom: 20px;
+      right: 10px;
+      z-index: 500; }
       .container .forumWrap .addPost a .add img {
         width: 100%; }
   .container .forumWrap .newPost form a {
@@ -651,8 +662,6 @@ header {
       cursor: pointer;
       text-align: center;
       display: block; }
-  .container .settingsWrap h1 {
-    padding-top: 20px; }
   .container .settingsWrap .settingsA, .container .settingsWrap .settingsN, .container .settingsWrap .settingsC, .container .settingsWrap .settingsP {
     position: relative; }
     .container .settingsWrap .settingsA .settingsAccount, .container .settingsWrap .settingsA .settingsNotification, .container .settingsWrap .settingsA .settingsChat, .container .settingsWrap .settingsA .settingsPersonalize, .container .settingsWrap .settingsN .settingsAccount, .container .settingsWrap .settingsN .settingsNotification, .container .settingsWrap .settingsN .settingsChat, .container .settingsWrap .settingsN .settingsPersonalize, .container .settingsWrap .settingsC .settingsAccount, .container .settingsWrap .settingsC .settingsNotification, .container .settingsWrap .settingsC .settingsChat, .container .settingsWrap .settingsC .settingsPersonalize, .container .settingsWrap .settingsP .settingsAccount, .container .settingsWrap .settingsP .settingsNotification, .container .settingsWrap .settingsP .settingsChat, .container .settingsWrap .settingsP .settingsPersonalize {
@@ -790,5 +799,32 @@ header {
         padding-top: 80px; }
         .container .errorWrap .error .errorImage img {
           width: 100%; }
+      .container .errorWrap .error #retry {
+        height: 40px;
+        margin: 10px auto;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        border-radius: 5px; }
+
+.logout {
+  position: relative;
+  margin: 50px 20px 20px 0;
+  border: solid 2px #ea5455;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  padding: 5px 20px;
+  max-width: 140px;
+  float: right;
+  text-align: center;
+  width: 40%; }
+  .logout:hover {
+    background-color: #213e64;
+    border: solid 2px #213e64; }
+  .logout a {
+    color: #ffffff;
+    text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
