--- a/views/error.jade
+++ b/views/error.jade
@@ -1,7 +1,6 @@
 extends layout
 block content
 	.container
-		include includes/nav-simple.jade
 		.errorWrap
 			h1 Error
 			.error
@@ -11,4 +10,6 @@ block content
 					h2 Woops! Looks like you got a bit lost!
 				.errorImage
 					img(src="/images/error_#{status}.png")
+				a(href="/")
+					button#retry(type="button") Go back
 				//-h2= message
