--- a/views/chat.jade
+++ b/views/chat.jade
@@ -12,7 +12,7 @@ block content
 					button.chatChoice#chatPeer(type='button') Talk to a stranger
 		if (history)
 			.history
-				h2 History
+				h2 Recent History
 				ul.historyconvo
 					for item,i in history
 						- var z = (100) - [i];
